<resources>
    <string name="app_name">WonBridge</string>
    <string name="service_phone_number" translatable="false">400-012-9288</string>
    <string name="service_email" translatable="false">service@wonbridge.com</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBDOUtFQWLjlFL1UtETShv3h5d_1o_rBuo</string>
    <string name="loading_wait" translatable="false">Loading... Please wait.</string>
    <string name="str_back_one_more_end">Pressing once more will be terminated.</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="input_id">Please input your ID/Phone number</string>
    <string name="input_pwd">密码必须是4~15位</string>
    <string name="pwd_error">Please input right ID and password.</string>
    <string name="login">登录</string>
    <string name="enter">注册</string>
    <string name="id_add">输入用户名/手机号码</string>
    <string name="password_add">输入密码</string>
    <string name="login_title">- 跨 境 乔 -</string>
    <string name="timeline">动态</string>
    <string name="user">用户</string>
    <string name="group">群組</string>
    <string name="tab_timeline">附近</string>
    <string name="message">消息</string>
    <string name="mypage">我</string>
    <string name="address">通讯录</string>
    <string name="friend">好友</string>
    <string name="msg_title">消息记录</string>
    <string name="chat">会话</string>
    <string name="chatting_group">聊天群</string>
    <string name="partner">公众号</string>
    <string name="profile">信息</string>
    <string name="deprofile">的信息</string>
    <string name="age">年龄</string>
    <string name="recent_connect">最后登录</string>
    <string name="forgotpwd"><u>忘记密码？</u></string>
    <string name="detimeline">的动态</string>
    <string name="activity">个人动态</string>
    <string name="user_haoma">用户编号 ：&#160;</string>
    <string name="username">输入用户名/手机号码</string>
    <string name="status">登录状态</string>
    <string name="friend_status">在线中</string>
    <string name="register_day">注册日期</string>
    <string name="location2">所在地</string>
    <string name="free_call">免费通话</string>
    <string name="video_chat">视频聊天</string>
    <string name="gift">赠送礼物</string>
    <string name="chatting">发送消息</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_friend">添加好友</string>
    <string name="block">屛蔽</string>
    <string name="delete_timeline">删除</string>
    <string name="error">Connecting to the server failed.\nPlease try again.</string>
    <string name="loading">It is being connected to the server. Please wait</string>
    <string name="transfer_file">I have sent the file.</string>
    <string name="album">图片</string>
    <string name="video">视频</string>
    <string name="camera">拍照</string>
    <string name="audio_call">语音通话</string>
    <string name="video_call">视频通话</string>
    <string name="send">发送</string>
    <string name="file">file</string>
    <string name="add">添加</string>
    <string name="invite">邀请</string>
    <string name="member_count">成员数</string>
    <string name="build_date">建群日期</string>
    <string name="unregistered_user">Unregistered user.</string>
    <string name="checkPwd">Please enter the password correctly.</string>
    <string name="success_to_login"> Logged in successfully. </string>
    <string name="chatting_error">The connection to the chat server has been shut down.</string>
    <string name="chatting_success">It was connected to the chat server.</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="transfer_fail">Transmission has been failed.</string>
    <string name="select_friend">选择朋友</string>
    <string name="chatting_connecting">It is being connected to the chat server.</string>
    <string name="confirm">确认</string>
    <string name="read">Read</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_room">確定要删除该聊天吗?</string>
    <string name="confirm_delete_timeline">確定要删除吗?</string>
    <string name="sound_off">静音</string>
    <string name="group_chatting">群组聊天</string>
    <string name="group_name">群组名称</string>
    <string name="group_member">群组成员</string>
    <string name="group_invite">邀请成员</string>
    <string name="edit_group_noti">请编辑群公告</string>
    <string name="input_group_name">请输入新的群名称</string>
    <string name="social_login">社交账户登录</string>
    <string name="select_signup">请选择注册方式。\n输入简单的信息就可以完成注册。</string>
    <string name="email_signup">电子邮箱注册</string>
    <string name="phone_signup">手机号码注册</string>
    <string name="signup">注册会员</string>
    <string name="input_email">输入电子邮箱</string>
    <string name="input_phone">输入手机号码</string>
    <string name="input_phone_email">输入手机号码/邮箱地址</string>
    <string name="input_code">输入验证码</string>
    <string name="send_code">发送验证信息</string>
    <string name="resend_code">再次发送</string>
    <string name="next">下一步</string>
    <string name="agree_terms">※ 按下一步, 同意 使用条款 和 个人信息保护政策。</string>
    <string name="register_profile">用户信息</string>
    <string name="user_id">用户名</string>
    <string name="nickname">名称</string>
    <string name="confirm_conflict">确认重复</string>
    <string name="password">密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="sex">性别</string>
    <string name="select_sex">请选择性别</string>
    <string name="man">男子</string>
    <string name="man2">男</string>
    <string name="woman">女子</string>
    <string name="woman2">女</string>
    <string name="skip">跳过</string>
    <string name="location_setting">区域设置</string>
    <string name="location_note">您想收到哪个国家（城市）的信息\n（生活、文化、旅行、商务等）。</string>
    <string name="gps_note">基于您所在的位置（GPS）\n提供丰富的信息和朋友推荐。</string>
    <string name="country">国家</string>
    <string name="select_country">区域选择</string>
    <string name="select_other_country">其他国家（城市）选择</string>
    <string name="location_note2">※ 区域可以在 个人信息设置里修改。</string>
    <string name="register_complete">完成注册。\n点击确认按钮，移到首页。 </string>
    <string name="location">区域</string>
    <string name="update_profile">修改信息</string>
    <string name="phone_note">请选择国家后输入手机号码。</string>
    <string name="save">保存</string>
    <string name="input_timeline">请输入发布信息。</string>
    <string name="timeline_list">详细信息</string>
    <string name="saving">保存中</string>
    <string name="mypage_title">我的主页</string>
    <string name="mypage_profile">头像</string>
    <string name="mypage_email">E-mail</string>
    <string name="mypage_nickname">昵称</string>
    <string name="mypage_sex">性别</string>
    <string name="mypage_customerid">服务编号</string>
    <string name="mypage_public_info">信息公开</string>
    <string name="mypage_mypos">我的位置</string>
    <string name="mypage_mytimeline">我的动态</string>
    <string name="mypage_reg_promember">开通付费会员</string>
    <string name="mypage_service">客服中心</string>
    <string name="mypage_setting">设置</string>
    <string name="coming_soon">精彩内容即将登场！</string>
    <string name="please_wait">敬请期待...</string>
    <string name="qa">咨询</string>
    <string name="qa_online">在线咨询</string>
    <string name="qa_email">邮件咨询</string>
    <string name="qa_phone">电话咨询</string>
    <string name="help">帮助</string>
    <string name="change_pwd">修改密码</string>
    <string name="manage_friend">好友管理</string>
    <string name="manage_point">积分管理</string>
    <string name="logout">退出登录</string>
    <string name="group_waiting">等待中</string>
    <string name="request">申请</string>
    <string name="select_image">选择图片</string>
    <string name="link">参与</string>
    <string name="event">活动</string>
    <string name="chat_box">聊天窗</string>
    <string name="search">搜索</string>
    <string name="coupon">代金券</string>
    <string name="sent_video_request"> 发起了视频通话</string>
    <string name="waiting_response">视频通话连接中···</string>
    <string name="service_category_1">跨境贸易</string>
    <string name="service_category_2">涉外培训</string>
    <string name="service_category_3">劳务外包</string>
    <string name="service_category_4">留学代理</string>
    <string name="service_category_5">投购资产</string>
    <string name="service_category_6">旅游考察</string>
    <string name="service_category_7">移民中介</string>
    <string name="service_category_8">打工度假</string>
    <string name="service_category_9">商品购物</string>
    <string name="service_category_10">娱乐联谊</string>
    <string name="service_category_11">侨居家政</string>
    <string name="service_category_12">定制服务</string>
    <string name="service_category_des_1_1">澳洲正品健康保健产品，高质低价</string>
    <string name="service_category_des_1_2">澳洲车厘子 30 - 32mm，生鲜空运，4日达</string>
    <string name="service_category_des_2_1">澳洲生活工作常识及生活技巧培训（全3日）</string>
    <string name="service_category_des_2_2">加拿大技术工种培训（多工种选择，每工种7日，全日制）</string>
    <string name="service_category_des_3_1">澳洲中型小区建房项目 - 木工劳务（2个月，全职）</string>
    <string name="service_category_des_3_2">澳洲房地产开发商长期泥瓦匠劳务（合同工，全职）</string>
    <string name="service_category_des_4_1">美、加、澳及欧洲多国大学留学代理，免费预评估</string>
    <string name="service_category_des_4_2">澳大利亚小学、中学、专科、大学留学代理，免费预评估</string>
    <string name="service_category_des_5_1">澳大利亚花园别墅，多房型，终身地权</string>
    <string name="service_category_des_5_2">澳大利亚景观豪宅，你值得拥有</string>
    <string name="service_category_des_6_1">澳洲大堡礁、黄金海岸、大红石 7日深度体验</string>
    <string name="service_category_des_6_2">悉尼或墨尔本生活体验、旅居、留学、移民考察（7日 至 20日，可选悉尼或墨尔本）</string>
    <string name="service_category_des_7_1">澳洲技术移民代理，4个月拿签证飞澳洲，技术狂人的你还等什么？（免费预评估）</string>
    <string name="service_category_des_7_2">美国投资移民代理，拥有国际会计师拍照，忠实可靠，信誉保证（免费预评估）</string>
    <string name="service_category_des_8_1">想要一个与众不同、终身难忘的“悠长假期”吗？澳洲打工度假签证申请</string>
    <string name="service_category_des_8_2">想要感受“指环王”里的极美世界吗？来新西兰边打工边体验吧</string>
    <string name="service_category_des_9_1">享受国外无污染、无风险、健康、原生态的产品? 海淘小乔来帮你</string>
    <string name="service_category_des_9_2">澳洲正品代购，假一罚十，急速物流，放心省力。还等什么，来剁手吧</string>
    <string name="service_category_des_10_1">奎省苏州侨会商会华人新年聚大餐！同胞们，快乐过大年啦</string>
    <string name="service_category_des_10_2">澳洲的唱将们！“蒙面唱将猜猜猜”澳洲站海选报名啦！释放内心中的那颗“闪亮的星”吧</string>
    <string name="service_category_des_11_1">墨市东区家政及清洁服务隆重上线。家中需要重新布局？清洁不到的地方都是隐患？没关系，看我们的！</string>
    <string name="service_category_des_11_2">帕斯全城 24x7 解锁换锁服务。让忘了带钥匙见鬼去吧！</string>
    <string name="service_category_des_12_1">尊享澳大利亚、中国往返旅居至诚 VIP 服务。量身定制，合体剪裁！只对唯一的你…</string>
    <string name="chuguo_search_1">常识</string>
    <string name="chuguo_search_2">护照</string>
    <string name="chuguo_search_3">国籍</string>
    <string name="chuguo_search_4">签证</string>
    <string name="chuguo_search_5">机票</string>
    <string name="chuguo_search_6">外汇</string>
    <string name="chuguo_search_7">交通</string>
    <string name="chuguo_search_8">住宿</string>
    <string name="my_coupon">我的代金券</string>
    <string name="got_coupon">获取代金券</string>
    <string name="change_nickname">修改昵称</string>
    <string name="exist_nickname">已注册的昵称。</string>
    <string name="change_pwd_note">密码必须由4~15字数的英文、数字和特殊符号组成。 </string>
    <string name="current_pwd">使用中的密码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_confirm">确认新密码</string>
    <string name="confirm_pwd_error">您输入的密码不一致!</string>
    <string name="logout_note">确定要退出乔乔吗？</string>
    <string name="unblock_friend">解除</string>
    <string name="manage_friend_note">以下是您屏蔽中的好友。\n如果您需要聊天，请解除屏蔽状态。</string>
    <string name="no_block_friend">没有屏蔽中的好友。</string>
    <string name="charge_service">充值服务</string>
    <string name="charge">充值</string>
    <string name="charge_vip">开通VIP</string>
    <string name="user_country">关注国家</string>
    <string name="school">毕业院校</string>
    <string name="home_village">故乡</string>
    <string name="working">同类</string>
    <string name="input">请输入</string>
    <string name="interest">同趣</string>
    <string name="interest1">K歌舞蹈</string>
    <string name="interest2">户外运动</string>
    <string name="interest3">文化创作</string>
    <string name="interest4">棋牌娱乐</string>
    <string name="interest5">品酒美食</string>
    <string name="interest6">专业策划</string>
</resources>