<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2">

    <include layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lyt_change_pwd"
            style="@style/MypageContainerStyle">

            <TextView
                style="@style/MypageLabelStyle"
                android:text="@string/change_pwd"/>

            <ImageView
                style="@style/MypageValueStyle"
                android:src="@drawable/left_arrow"
                android:scaleType="fitEnd"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_manage_friend"
            android:layout_marginTop="6dp"
            style="@style/MypageContainerStyle">

            <TextView
                style="@style/MypageLabelStyle"
                android:text="@string/manage_friend"/>

            <ImageView
                style="@style/MypageValueStyle"
                android:src="@drawable/left_arrow"
                android:scaleType="fitEnd"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_manage_point"
            style="@style/MypageContainerStyle"
            android:layout_marginTop="6dp">

            <TextView
                style="@style/MypageLabelStyle"
                android:text="@string/manage_point"/>

            <ImageView
                style="@style/MypageValueStyle"
                android:src="@drawable/left_arrow"
                android:scaleType="fitEnd"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"/>


        <TextView
            android:id="@+id/txv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/logout"
            android:background="#de4949"/>


    </LinearLayout>



</LinearLayout>